@@ -37,6 +37,7 @@ Chronological list of authors
   - Sébastien Buchoux
 2012
   - Lukas Grossar
+  - Andy Somogyi
 
 
 External code
