@@ -56,7 +56,7 @@ master_doc = 'index'
 authors = u"""Naveen Michaud-Agrawal, Elizabeth J. Denning, Joshua Adelman,
     Christian Beckstein (logo), Sébastien Buchoux, David Caplan, Jan Domański,
     Philip Fowler, Joseph Goose, Lukas Grossar, Benjamin Hall, Danny Parton,
-    Tyler Reddy, Paul Rigor, and Oliver Beckstein"""
+    Tyler Reddy, Paul Rigor, Andy Somogyi, and Oliver Beckstein"""
 project = u'MDAnalysis'
 copyright = u'2005-2012, ' + authors
 
