@@ -16,9 +16,10 @@
 #
 
 import MDAnalysis
-from MDAnalysis.tests.datafiles import PSF, DCD, PDB_small
+from MDAnalysis.tests.datafiles import PSF, DCD, PDB_small, GRO, TRR
 import MDAnalysis.core.AtomGroup
 from MDAnalysis.core.AtomGroup import Atom, AtomGroup
+from MDAnalysis import NoDataError
 
 import numpy
 from numpy.testing import *
@@ -52,36 +53,35 @@ class TestAtom(TestCase):
         """Set up the standard AdK system in implicit solvent."""
         self.universe = MDAnalysis.Universe(PSF, DCD)
         self.atom = self.universe.atoms[1000]  # Leu67:CG
+        self.known_pos = array([  3.94543672, -12.4060812 ,  -7.26820087], dtype=float32)
 
     def tearDown(self):
         del self.universe
         del self.atom
 
-    def test_attributes(self):
-        u = self.universe
+    def test_attributes_names(self):
         a = self.atom
         assert_equal(a.name, 'CG')
         assert_equal(a.resname, 'LEU')
-        
-        known_pos = array([  3.94543672, -12.4060812 ,  -7.26820087], dtype=float32)
 
+    def test_attributes_pos(self):
         # old pos property
-        assert_almost_equal(a.pos, known_pos) 
+        assert_almost_equal(self.atom.pos, self.known_pos)
+        def set_pos():
+            self.atom.pos = self.known_pos + 3.14
+        assert_raises(AttributeError, set_pos)
 
-        # new position property
-        assert_almost_equal(a.position, known_pos) 
+    def test_attributes_positions(self):
+        a = self.atom
+        # new position property (mutable)
+        assert_almost_equal(a.position, self.known_pos)
         pos = a.position + 3.14
         a.position = pos
-        assert_equal(a.position, pos)
+        assert_almost_equal(a.position, pos)
 
-        # set it back
-        a.position = known_pos
-        
-        asel =  u.selectAtoms('atom 4AKE 67 CG').atoms[0]
-        assert_equal(a, asel)
-
-        
-        
+    def test_atom_selection(self):
+        asel =  self.universe.selectAtoms('atom 4AKE 67 CG').atoms[0]
+        assert_equal(self.atom, asel)
 
     def test_hierarchy(self):
         u = self.universe
@@ -284,19 +284,57 @@ class TestAtomGroup(TestCase):
         ag = self.universe.selectAtoms("bynum 12:42")
         pos = ag.positions + 3.14
         ag.positions = pos
-
         # shoud work
-        assert_equal(ag.coordinates(), pos,
-                     "failed to update atoms 12:42 position to new position")
-
-        # create wrong size array
-        badarr = numpy.random.random((pos.shape[0] - 1, pos.shape[1] - 1))
-        try:
+        assert_almost_equal(ag.coordinates(), pos,
+                            err_msg="failed to update atoms 12:42 position to new position")
+        def set_badarr(pos=pos):
+            # create wrong size array
+            badarr = numpy.random.random((pos.shape[0] - 1, pos.shape[1] - 1))
             ag.positions = badarr
-            raise AssertionError('positions update should have failed with wrong sized array')
-        except ValueError:
-            pass
+        assert_raises(ValueError, set_badarr)
 
+    def test_set_positions(self):
+        ag = self.universe.selectAtoms("bynum 12:42")
+        pos = ag.get_positions() + 3.14
+        ag.set_positions(pos)
+        assert_almost_equal(ag.coordinates(), pos,
+                            err_msg="failed to update atoms 12:42 position to new position")
+
+    def test_no_velocities_raises_NoDataError(self):
+        def get_vel(ag=self.universe.selectAtoms("bynum 12:42")):
+            v = ag.get_velocities()
+        # trj has no velocities
+        assert_raises(NoDataError, get_vel)
+
+class TestAtomGroupVelocities(TestCase):
+    """Tests of velocity-related functions in AtomGroup"""
+    def setUp(self):
+        self.universe = MDAnalysis.Universe(GRO, TRR)
+        self.ag = self.universe.selectAtoms("bynum 12:42")
+
+    @dec.slow
+    def test_get_velocities(self):
+        v = self.ag.get_velocities()
+        assert_(numpy.any(numpy.abs(v) > 1e-6), "velocities should be non-zero")
+
+    @dec.slow
+    def test_velocities(self):
+        ag = self.universe.atoms[42:45]
+        ref_v = numpy.array([[ -3.61757946,  -4.9867239 ,   2.46281552],
+                             [  2.57792854,   3.25411797,  -0.75065529],
+                             [ 13.91627216,  30.17778587, -12.16669178]])
+        v = ag.velocities()
+        # TODO: for 0.8 change to
+        ##v = self.ag.velocities
+        assert_almost_equal(v, ref_v, err_msg="velocities were not read correctly")
+
+    @dec.slow
+    def test_set_velocities(self):
+        ag = self.ag
+        v = ag.get_velocities() - 2.7271
+        ag.set_velocities(v)
+        assert_almost_equal(ag.get_velocities(), v,
+                            err_msg="messages were not set to new value")
 
 def test_empty_AtomGroup():
     """Test that a empty AtomGroup can be constructed (Issue 12)"""
